rip_interface.* deleted README added compile works

--- a/myquagga/ripd/Makefile.am
+++ b/myquagga/ripd/Makefile.am
@@ -10,11 +10,11 @@ noinst_LIBRARIES = librip.a
 sbin_PROGRAMS = ripd
 
 librip_a_SOURCES = \
-	ripd.c rip_zebra.c rip_interface.c \
+	ripd.c rip_zebra.c \
 	rip_routemap.c rip_peer.c
 
 noinst_HEADERS = \
-	ripd.h rip_interface.h
+	ripd.h
 
 ripd_SOURCES = \
 	rip_main.c $(librip_a_SOURCES)
